@@ -55,7 +55,7 @@ threads = 5
 idle = 30
 
 ; Timeout in seconds for connections before giving up
-socktimeout = 5
+socktimeout = 5.0
 
 ; Run in foreground when frozen or with pythonw.exe. 0 or 1, default: 0
 ;   Px will attach to the console and write to it even though the prompt is
