@@ -18,6 +18,7 @@ TBD
 - Add --hostonly which only allows IP addresses assigned to local interfaces to
   use Px. Disallow any external clients unless --gateway specified along with a
   restrictive --allow definition - PR20
+- Changed --socktimeout from int to float
 
 v0.3.0 - 2018-02-19
 - Fixed issue 9 - Added support for winkerberos to workaround pywin32 bug
